// Vitest Snapshot v1

exports[`MatchSnapShot test AskMessageBoxOrigin 1`] = `
<div
  className="boolean--result"
>
  <form
    className="form--invitation"
    data-testid="asktestid"
  >
    <label
      className="lbl--invite"
      htmlFor="users"
    >
      Invite
      <img
        alt="no img panel ask invite"
        className="img--invite"
        height="50px"
        width="50px"
      />
      <span
        className="span--invite"
      >
         
      </span>
       to private chat :
    </label>
    <label
      className="lbl--choicechat"
    >
      Would you like 
      <select
        className="select--invite"
        id="invite"
        name="invite"
        onChange={[Function]}
        value="Private"
      >
        <option
          className="option--invite"
          name="invite"
          value="Private"
        >
          Private
        </option>
        <option
          className="option--invite"
          name="invite"
          value="Info"
        >
          Info
        </option>
        <option
          className="option--invite"
          name="invite"
          value="Question"
        >
          Question
        </option>
      </select>
       chat.
    </label>
    <button
      className="btn--invitation"
      onClick={[Function]}
      type="button"
    >
      Invite
    </button>
    <button
      className="btn--close"
    >
      X
    </button>
  </form>
</div>
`;

exports[`MatchSnapShot test ComputerRoom 1`] = `
<div
  className="nextcomp--room"
  data-testid="computerroomtest"
>
  <div
    className="div--animationroomStyle"
  >
    <div
      className="rotation--roomstyle"
    >
      <h1 />
    </div>
  </div>
  <div />
  <h1
    className="title--room"
  >
    Room 
  </h1>
  <div
    className="div--terminaluser"
    data-testid="testdiv"
  >
    <div
      className="section--terminal"
    >
      <div
        className="div--worldbg"
      >
        <img
          alt="/src/assets/background/world_connected.png"
          className="img--bgterminal"
          height="100%"
          src="/src/assets/background/world_connected.png"
          width="100%"
        />
      </div>
      <section
        className="terminal"
        data-testid="terminaltest"
      >
        <span
          className="intro--terminal"
        >
          <h3
            className="intro--terminalh3"
          />
        </span>
        <div
          className="div--terminal"
        />
        <div
          className="subterminal"
        >
          <div
            className="div--psubterminal"
          >
            <p
              className="arrow"
            >
              ▶
            </p>
          </div>
          <input
            className="input--message"
            onChange={[Function]}
            placeholder="Write something here..."
            required={true}
            type="text"
            value=""
          />
          <button
            className="btn--user"
            onClick={[Function]}
            type="button"
          >
            Enter
          </button>
        </div>
      </section>
    </div>
    <section
      className="user--online"
    >
      <div
        className="div--userolinetitle"
      >
        <h3
          className="userolinetitle"
        >
          Online Users
        </h3>
      </div>
    </section>
  </div>
</div>
`;

exports[`MatchSnapShot test DisplayInviteOrigin 1`] = `
<div
  className="invitation--display"
  data-testid="displayOthertestid"
>
  <h4
    className="invitation--h4"
  >
    <span
      className="span--h4"
    >
       !
    </span>
    <p
      style={
        {
          "marginTop": "30px",
        }
      }
    >
      You've recieved invitation from
    </p>
    <span
      className="span--h4"
    >
      .
    </span>
  </h4>
  <div
    className="definedroom--display"
  >
    <p
      className="invitation--p"
    >
      Are you ok for
      <span
        className="span--invitationp"
      />
      chat ?
    </p>
    <div
      className="checkbox--firstconfirm"
    >
      <label
        className="checkbox--lbl"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
         Yes
      </label>
      <label
        className="checkbox--lbl"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
         No
      </label>
    </div>
  </div>
  <button
    className="btn--displayotheruser"
    onClick={[Function]}
    type="button"
  >
    Validate
  </button>
</div>
`;

exports[`MatchSnapShot test HandleAskUserOrigin 1`] = `
<div
  className="all--usersbanner"
  data-testid="onlinetest"
>
  <div
    className="username--useronline"
  >
    <img
      className="smile--img"
      height="100%"
      width="100%"
    />
    <span
      className="useronline--username"
    />
  </div>
  <p
    className="para--spanchat"
  >
    <span
      className="span--useronline connector--icon"
    >
      ❌
    </span>
    <span
      className="span--useronline styleusr--span"
      onClick={[Function]}
      style={
        {
          "color": "sandybrown",
          "fontSize": "22px",
        }
      }
    >
      ✉
    </span>
  </p>
</div>
`;

exports[`MatchSnapShot test TerminalComponent 1`] = `
<section
  className="terminal"
  data-testid="terminaltest"
>
  <span
    className="intro--terminal"
  >
    <h3
      className="intro--terminalh3"
    />
  </span>
  <div
    className="div--terminal"
  />
  <div
    className="subterminal"
  >
    <div
      className="div--psubterminal"
    >
      <p
        className="arrow"
      >
        ▶
      </p>
    </div>
    <input
      className="input--message"
      onChange={[Function]}
      placeholder="Write something here..."
      required={true}
      type="text"
      value=""
    />
    <button
      className="btn--user"
      onClick={[Function]}
      type="button"
    >
      Enter
    </button>
  </div>
</section>
`;
